--- a/app/src/main/res/layout/started_game.xml
+++ b/app/src/main/res/layout/started_game.xml
@@ -280,7 +280,7 @@
                                 android:id="@+id/touchdown_rb_one_display"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_toRightOf="@id/rushing_comp_total"
+                                android:layout_toRightOf="@id/rushing_yards_total"
                                 android:paddingLeft="@dimen/large_padding"
                                 android:text="@string/touchdowns" />
                             <TextView
@@ -436,26 +436,30 @@
                             android:textColor="#000000"
                             />
                         <EditText
-                            android:id="@+id/team_one_rushing_minus_one"
+                            android:id="@+id/team_one_rushing_yardage"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_alignTop="@id/team_one_rushing_plus_ten"
-                            android:layout_alignBottom="@id/team_one_rushing_plus_ten"
+                            android:layout_alignTop="@id/team_one_rushing_completion"
+                            android:layout_alignBottom="@id/team_one_rushing_completion"
                             android:layout_alignLeft="@id/qb_one_pass_attempt"
                             android:layout_alignRight="@id/qb_one_incomplete"
                             android:layout_below="@id/team_one_rush_stats"
                             android:gravity="center|bottom"
-                            android:text="Enter Yardadage Gained"
-                            android:textColor="#55777777"
+                            android:inputType="numberDecimal|numberSigned"
+                            android:digits="01234567890-"
+                            android:text=""
+                            android:hint="Enter Yardage Gain"
+                            android:textColorHint="#666666"
+                            android:textColor="#999999"
                             android:textSize="@dimen/small_font"
                             />
                         <Button
-                            android:id="@+id/team_one_rushing_plus_ten"
+                            android:id="@+id/team_one_rushing_completion"
                             android:onClick="onClickTeamOneRushComplete"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@id/team_one_rush_stats"
-                            android:layout_toRightOf="@id/team_one_rushing_minus_one"
+                            android:layout_toRightOf="@id/team_one_rushing_yardage"
                             android:text="Completion"
                             android:textSize="@dimen/small_med_font"
                             />
@@ -465,7 +469,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@id/team_one_rush_stats"
-                            android:layout_toRightOf="@id/team_one_rushing_plus_ten"
+                            android:layout_toRightOf="@id/team_one_rushing_completion"
                             android:text="@string/fumble"
                             android:textSize="@dimen/small_med_font"
                             />
@@ -475,33 +479,37 @@
                             android:layout_height="wrap_content"
                             android:gravity="center_horizontal"
                             android:layout_marginTop="@dimen/small_padding"
-                            android:layout_below="@id/team_one_rushing_minus_one"
+                            android:layout_below="@id/team_one_rushing_yardage"
                             android:text="@string/receiving_statistics"
                             android:textStyle="bold"
                             android:textColor="#000000"
                             />
 
                         <EditText
-                            android:id="@+id/team_one_receiving_minus_one"
+                            android:id="@+id/team_one_receiving_yardage"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_alignTop="@id/team_one_receiving_plus_ten"
-                            android:layout_alignBottom="@id/team_one_receiving_plus_ten"
+                            android:layout_alignTop="@id/team_one_receiving_completion"
+                            android:layout_alignBottom="@id/team_one_receiving_completion"
                             android:layout_alignLeft="@id/qb_one_pass_attempt"
                             android:layout_alignRight="@id/qb_one_incomplete"
                             android:layout_below="@id/team_one_rush_stats"
                             android:gravity="center|bottom"
-                            android:text="Enter Yardadage Gained"
-                            android:textColor="#55777777"
+                            android:digits="0123456789-"
+                            android:inputType="numberDecimal|numberSigned"
+                            android:text=""
+                            android:hint="Enter Yardage Gain"
+                            android:textColorHint="#666666"
+                            android:textColor="#999999"
                             android:textSize="@dimen/small_font"
                             />
                         <Button
-                            android:id="@+id/team_one_receiving_plus_ten"
-                            android:onClick="onClickTeamOneRushComplete"
+                            android:id="@+id/team_one_receiving_completion"
+                            android:onClick="onClickTeamOneRecComplete"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@id/team_one_rec_stats"
-                            android:layout_toRightOf="@id/team_one_receiving_minus_one"
+                            android:layout_toRightOf="@id/team_one_receiving_yardage"
                             android:text="Completion"
                             android:textSize="@dimen/small_med_font"
                             />
@@ -511,7 +519,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@id/team_one_rec_stats"
-                            android:layout_toRightOf="@id/team_one_receiving_plus_ten"
+                            android:layout_toRightOf="@id/team_one_receiving_completion"
                             android:text="@string/fumble"
                             android:textSize="@dimen/small_med_font"
                             />
@@ -959,34 +967,32 @@
                             android:textStyle="bold"
                             android:textColor="#000000"
                             />
-                        <Button
-                            android:id="@+id/team_two_rushing_minus_one"
-                            android:onClick="onClickTeamTwoMinusOneRush"
+                        <EditText
+                            android:id="@+id/team_two_rushing_yardage"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_alignTop="@id/team_two_rushing_completion"
+                            android:layout_alignBottom="@id/team_two_rushing_completion"
+                            android:layout_alignLeft="@id/qb_two_pass_attempt"
+                            android:layout_alignRight="@id/qb_two_incomplete"
                             android:layout_below="@id/team_two_rush_stats"
-                            android:text="@string/_1"
+                            android:gravity="center|bottom"
+                            android:inputType="number"
+                            android:text="  "
+                            android:hint="@string/enter_yardage_gain"
+                            android:textColorHint="#666666"
+                            android:textColor="#999999"
                             android:textSize="@dimen/small_font"
                             />
                         <Button
-                            android:id="@+id/team_two_rushing_plus_one"
-                            android:onClick="onClickTeamTwoPlusOneRush"
+                            android:id="@+id/team_two_rushing_completion"
+                            android:onClick="onClickTeamTwoRushComplete"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@id/team_two_rush_stats"
-                            android:layout_toRightOf="@id/team_two_rushing_minus_one"
-                            android:text="@string/_1plus"
-                            android:textSize="@dimen/small_font"
-                            />
-                        <Button
-                            android:id="@+id/team_two_rushing_plus_ten"
-                            android:onClick="onClickTeamTwoPlusTenRush"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@id/team_two_rush_stats"
-                            android:layout_toRightOf="@id/team_two_rushing_plus_one"
-                            android:text="@string/_10"
-                            android:textSize="@dimen/small_font"
+                            android:layout_toRightOf="@id/team_two_rushing_yardage"
+                            android:text="@string/completion"
+                            android:textSize="@dimen/small_med_font"
                             />
                         <Button
                             android:id="@+id/team_two_rushing_fumble"
@@ -994,9 +1000,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@id/team_two_rush_stats"
-                            android:layout_toRightOf="@id/team_two_rushing_plus_ten"
+                            android:layout_toRightOf="@id/team_two_rushing_completion"
                             android:text="@string/fumble"
-                            android:textSize="@dimen/small_font"
+                            android:textSize="@dimen/small_med_font"
                             />
                         <TextView
                             android:id="@+id/team_two_rec_stats"
@@ -1004,39 +1010,38 @@
                             android:layout_height="wrap_content"
                             android:gravity="center_horizontal"
                             android:layout_marginTop="@dimen/small_padding"
-                            android:layout_below="@id/team_two_rushing_minus_one"
+                            android:layout_below="@id/team_two_rushing_yardage"
                             android:text="@string/receiving_statistics"
                             android:textStyle="bold"
                             android:textColor="#000000"
                             />
-                        <Button
-                            android:id="@+id/team_two_receiving_minus_one"
-                            android:onClick="onClickTeamTwoMinusOneRec"
+
+                        <EditText
+                            android:id="@+id/team_two_receiving_yardage"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_below="@id/team_two_rec_stats"
-                            android:text="@string/_1"
+                            android:layout_alignTop="@id/team_two_receiving_completion"
+                            android:layout_alignBottom="@id/team_two_receiving_completion"
+                            android:layout_alignLeft="@id/qb_two_pass_attempt"
+                            android:layout_alignRight="@id/qb_two_incomplete"
+                            android:layout_below="@id/team_two_rush_stats"
+                            android:gravity="center|bottom"
+                            android:inputType="number"
+                            android:text="  "
+                            android:hint="@string/enter_yardage_gain"
+                            android:textColorHint="#666666"
+                            android:textColor="#999999"
                             android:textSize="@dimen/small_font"
                             />
                         <Button
-                            android:id="@+id/team_two_receiving_plus_one"
-                            android:onClick="onClickTeamTwoPlusOneRec"
+                            android:id="@+id/team_two_receiving_completion"
+                            android:onClick="onClickTeamTwoRecComplete"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@id/team_two_rec_stats"
-                            android:layout_toRightOf="@id/team_two_receiving_minus_one"
-                            android:text="@string/_1plus"
-                            android:textSize="@dimen/small_font"
-                            />
-                        <Button
-                            android:id="@+id/team_two_receiving_plus_ten"
-                            android:onClick="onClickTeamTwoPlusTenRec"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@id/team_two_rec_stats"
-                            android:layout_toRightOf="@id/team_two_receiving_plus_one"
-                            android:text="@string/_10"
-                            android:textSize="@dimen/small_font"
+                            android:layout_toRightOf="@id/team_two_receiving_yardage"
+                            android:text="@string/completion"
+                            android:textSize="@dimen/small_med_font"
                             />
                         <Button
                             android:id="@+id/team_two_receiving_fumble"
@@ -1044,9 +1049,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@id/team_two_rec_stats"
-                            android:layout_toRightOf="@id/team_two_receiving_plus_ten"
+                            android:layout_toRightOf="@id/team_two_receiving_completion"
                             android:text="@string/fumble"
-                            android:textSize="@dimen/small_font"
+                            android:textSize="@dimen/small_med_font"
                             />
                     </RelativeLayout>
 
