--- a/app/src/main/res/layout/activity_game_start.xml
+++ b/app/src/main/res/layout/activity_game_start.xml
@@ -64,6 +64,84 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/start_widereceiver_display"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".25"
+        android:layout_marginRight="@dimen/small_padding"
+        android:layout_marginLeft="@dimen/small_padding">
+        <TextView
+            android:id="@+id/team_one_starting_wr"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="@dimen/small_padding"
+            android:paddingEnd="@dimen/small_padding"
+            android:fontFamily="@font/freshman"
+            android:textSize="@dimen/small_med_font"
+            android:textColor="#000000"
+            android:text="Starting Wide Receiver 1: "/>
+        <TextView
+            android:id="@+id/team_one_receiving_player_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/freshman"
+            android:textSize="@dimen/small_med_font"
+            android:text="Temporary Name Here" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/start_widereceiver2_display"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".25"
+        android:layout_marginRight="@dimen/small_padding"
+        android:layout_marginLeft="@dimen/small_padding">
+        <TextView
+            android:id="@+id/team_one_starting_wr2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="@dimen/small_padding"
+            android:paddingEnd="@dimen/small_padding"
+            android:fontFamily="@font/freshman"
+            android:textSize="@dimen/small_med_font"
+            android:textColor="#000000"
+            android:text="Starting Wide Receiver 2: "/>
+        <TextView
+            android:id="@+id/team_one_receiving2_player_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/freshman"
+            android:textSize="@dimen/small_med_font"
+            android:text="Temporary Name Here" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/start_runnningback_display"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".25"
+        android:layout_marginRight="@dimen/small_padding"
+        android:layout_marginLeft="@dimen/small_padding">
+        <TextView
+            android:id="@+id/team_one_starting_rb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="@dimen/small_padding"
+            android:paddingEnd="@dimen/small_padding"
+            android:fontFamily="@font/freshman"
+            android:textSize="@dimen/small_med_font"
+            android:textColor="#000000"
+            android:text="Starting Running Back: "/>
+        <TextView
+            android:id="@+id/team_one_rushing_player_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/freshman"
+            android:textSize="@dimen/small_med_font"
+            android:text="Temporary Name Here" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3">
@@ -153,6 +231,84 @@
             android:fontFamily="@font/freshman"
             android:textSize="@dimen/small_med_font"
             android:text="Temporary Name Here"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/start_widereceiver_display_team2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".25"
+        android:layout_marginRight="@dimen/small_padding"
+        android:layout_marginLeft="@dimen/small_padding">
+        <TextView
+            android:id="@+id/team_two_starting_wr"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="@dimen/small_padding"
+            android:paddingEnd="@dimen/small_padding"
+            android:fontFamily="@font/freshman"
+            android:textSize="@dimen/small_med_font"
+            android:textColor="#000000"
+            android:text="Starting Wide Receiver 1: "/>
+        <TextView
+            android:id="@+id/team_two_receiving_player_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/freshman"
+            android:textSize="@dimen/small_med_font"
+            android:text="Temporary Name Here" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/start_widereceiver2_display_team2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".25"
+        android:layout_marginRight="@dimen/small_padding"
+        android:layout_marginLeft="@dimen/small_padding">
+        <TextView
+            android:id="@+id/team_two_starting_wr2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="@dimen/small_padding"
+            android:paddingEnd="@dimen/small_padding"
+            android:fontFamily="@font/freshman"
+            android:textSize="@dimen/small_med_font"
+            android:textColor="#000000"
+            android:text="Starting Wide Receiver 2: "/>
+        <TextView
+            android:id="@+id/team_two_receiving2_player_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/freshman"
+            android:textSize="@dimen/small_med_font"
+            android:text="Temporary Name Here" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/start_runnningback_display_team2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".25"
+        android:layout_marginRight="@dimen/small_padding"
+        android:layout_marginLeft="@dimen/small_padding">
+        <TextView
+            android:id="@+id/team_two_starting_rb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="@dimen/small_padding"
+            android:paddingEnd="@dimen/small_padding"
+            android:fontFamily="@font/freshman"
+            android:textSize="@dimen/small_med_font"
+            android:textColor="#000000"
+            android:text="Starting Running Back: "/>
+        <TextView
+            android:id="@+id/team_two_rushing_player_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/freshman"
+            android:textSize="@dimen/small_med_font"
+            android:text="Temporary Name Here" />
     </LinearLayout>
 
 
