Overhaul over most of the major mechanics on the app.
Updated borderless buttons.

Validated onClicks.

Team Two Fumbles not displaying correctly (need further work)
(OPTIONAL) update background to helmet logo

--- a/app/src/main/res/layout/activity_team_selection.xml
+++ b/app/src/main/res/layout/activity_team_selection.xml
@@ -17,20 +17,9 @@
         android:layout_marginLeft="@dimen/small_padding"
         android:layout_marginRight="@dimen/small_padding"
         android:fontFamily="@font/freshman"
+        android:text="Choose Home Team"
         android:textSize="@dimen/medium_font"
         android:gravity="center" />
-    <TextView
-        android:id="@+id/team_one_passing_player_name"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".25"
-        android:layout_marginLeft="@dimen/small_med_padding"
-        android:layout_marginRight="@dimen/small_med_padding"
-        android:text=""
-        android:textColor="#FFFFFF"
-        android:textSize="@dimen/small_med_font"
-        android:textStyle="bold"/>
-
     <ImageView
         android:id="@+id/team_one_spinner_team_logo"
         android:layout_width="wrap_content"
@@ -40,8 +29,7 @@
         android:layout_marginLeft="@dimen/small_padding"
         android:layout_marginRight="@dimen/small_padding"
         android:gravity="center"
-        />
-
+        android:contentDescription="TODO" />
     <Spinner
         android:id="@+id/teamTwo_spinner"
         android:layout_width="match_parent"
@@ -49,20 +37,9 @@
         android:layout_weight=".5"
         android:layout_marginLeft="@dimen/small_padding"
         android:layout_marginRight="@dimen/small_padding"
+        android:text="Choose Away Team"
         android:textSize="@dimen/medium_font"
         android:gravity="center" />
-    <TextView
-        android:id="@+id/team_two_passing_player_name"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".25"
-        android:layout_marginLeft="@dimen/small_med_padding"
-        android:layout_marginRight="@dimen/small_med_padding"
-        android:text=""
-        android:textColor="#FFFFFF"
-        android:textSize="@dimen/small_med_font"
-        android:textStyle="bold"/>
-
     <ImageView
         android:id="@+id/team_two_spinner_team_logo"
         android:layout_width="wrap_content"
@@ -71,8 +48,7 @@
         android:layout_marginLeft="@dimen/small_padding"
         android:layout_marginRight="@dimen/small_padding"
         android:gravity="center"
-        />
-
+        android:contentDescription="TODO" />
     <Button
         style="@style/Widget.AppCompat.Button.Borderless"
         android:onClick="onClickStartGame"
@@ -84,10 +60,8 @@
         android:layout_marginBottom="@dimen/small_med_padding"
         android:background="@drawable/border"
         android:fontFamily="@font/freshman"
-        android:textColor="#99111111"
+        android:textColor="#111111"
         android:textStyle="bold"
-        android:textSize="@dimen/small_med_font"
-        android:text="@string/start_game"
-        />
-
+        android:textSize="@dimen/medium_font"
+        android:text="@string/start_game" />
 </LinearLayout>
