--- a/app/src/main/res/layout/half_time.xml
+++ b/app/src/main/res/layout/half_time.xml
@@ -5,36 +5,28 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context="com.example.android.footballgamerecorder.StartGame">
+    tools:context="com.example.android.footballgamerecorder.HalfTime">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/team_one_game_start_name_display"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight=".75"
-        android:layout_margin="@dimen/small_padding">
-        <TextView
-            android:id="@+id/team_one_game_start_name_display"
-            android:layout_weight="3"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/team_name_here"
-            android:fontFamily="@font/freshman"
-            android:textSize="@dimen/large_font"
-            android:textColor="#000000"
-            android:textStyle="bold"
-            android:textAllCaps="true"/>
-
-    </LinearLayout>
+        android:layout_margin="@dimen/small_padding"
+        android:text="@string/team_name_here"
+        android:fontFamily="@font/freshman"
+        android:textSize="@dimen/large_font"
+        android:textColor="#000000"
+        android:textStyle="bold"
+        android:textAllCaps="true"/>
 
     <LinearLayout
-        android:id="@+id/start_quarterback_display"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight=".25"
         android:layout_marginRight="@dimen/small_padding"
         android:layout_marginLeft="@dimen/small_padding">
         <TextView
-            android:id="@+id/team_one_starting_qb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingRight="@dimen/small_padding"
@@ -84,7 +76,7 @@
                 android:layout_below="@id/team_one_score_display"
                 android:layout_marginLeft="@dimen/medium_padding"
                 android:text="000"
-                />
+                tools:ignore="RtlHardcoded" />
             <TextView
                 android:id="@+id/team_one_passing_yards"
                 android:layout_width="wrap_content"
@@ -93,7 +85,7 @@
                 android:layout_below="@id/team_one_score_display"
                 android:layout_marginLeft="@dimen/small_med_padding"
                 android:text="Passing Yards"
-                />
+                tools:ignore="RtlHardcoded" />
 
             <TextView
                 android:id="@+id/team_one_rushing_yards_display"
@@ -102,7 +94,7 @@
                 android:layout_below="@id/team_one_passing_yards_display"
                 android:layout_marginLeft="@dimen/medium_padding"
                 android:text="000"
-                />
+                tools:ignore="RtlHardcoded" />
             <TextView
                 android:id="@+id/team_one_rushing_yards"
                 android:layout_width="wrap_content"
@@ -111,7 +103,7 @@
                 android:layout_marginLeft="@dimen/small_med_padding"
                 android:layout_below="@id/team_one_passing_yards"
                 android:text="Rushing Yards"
-                />
+                tools:ignore="RtlHardcoded" />
 
             <TextView
                 android:id="@+id/team_one_receiving_yards_display"
@@ -120,47 +112,38 @@
                 android:layout_below="@id/team_one_rushing_yards_display"
                 android:layout_marginLeft="@dimen/medium_padding"
                 android:text="000"
-                />
+                tools:ignore="RtlHardcoded" />
             <TextView
-                android:id="@+id/team_one_receiving_yards"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/small_med_padding"
                 android:layout_toRightOf="@id/team_one_receiving_yards_display"
                 android:layout_below="@id/team_one_rushing_yards"
                 android:text="Receiving Yards"
-                />
+                tools:ignore="RtlHardcoded" />
         </RelativeLayout>
     </LinearLayout>
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/team_two_game_start_name_display"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight=".75"
-        android:layout_margin="@dimen/small_padding">
-        <TextView
-            android:id="@+id/team_two_game_start_name_display"
-            android:layout_weight="3"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/team_name_here"
-            android:fontFamily="@font/freshman"
-            android:textSize="@dimen/large_font"
-            android:textColor="#000000"
-            android:textStyle="bold"
-            android:textAllCaps="true"/>
-
-    </LinearLayout>
+        android:layout_margin="@dimen/small_padding"
+        android:text="@string/team_name_here"
+        android:fontFamily="@font/freshman"
+        android:textSize="@dimen/large_font"
+        android:textColor="#000000"
+        android:textStyle="bold"
+        android:textAllCaps="true"/>
 
     <LinearLayout
-        android:id="@+id/start_quarterback2_display"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight=".25"
         android:layout_marginRight="@dimen/small_padding"
         android:layout_marginLeft="@dimen/small_padding">
         <TextView
-            android:id="@+id/team_two_starting_qb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingRight="@dimen/small_padding"
@@ -210,7 +193,7 @@
                 android:layout_below="@id/team_two_score_display"
                 android:layout_marginLeft="@dimen/medium_padding"
                 android:text="000"
-                />
+                tools:ignore="RtlHardcoded" />
             <TextView
                 android:id="@+id/team_two_passing_yards"
                 android:layout_width="wrap_content"
@@ -219,7 +202,7 @@
                 android:layout_below="@id/team_two_score_display"
                 android:layout_marginLeft="@dimen/small_med_padding"
                 android:text="Passing Yards"
-                />
+                tools:ignore="RtlHardcoded" />
 
             <TextView
                 android:id="@+id/team_two_rushing_yards_display"
@@ -228,7 +211,7 @@
                 android:layout_below="@id/team_two_passing_yards_display"
                 android:layout_marginLeft="@dimen/medium_padding"
                 android:text="000"
-                />
+                tools:ignore="RtlHardcoded" />
             <TextView
                 android:id="@+id/team_two_rushing_yards"
                 android:layout_width="wrap_content"
@@ -237,7 +220,7 @@
                 android:layout_marginLeft="@dimen/small_med_padding"
                 android:layout_below="@id/team_two_passing_yards"
                 android:text="Rushing Yards"
-                />
+                tools:ignore="RtlHardcoded" />
 
             <TextView
                 android:id="@+id/team_two_receiving_yards_display"
@@ -246,16 +229,15 @@
                 android:layout_below="@id/team_two_rushing_yards_display"
                 android:layout_marginLeft="@dimen/medium_padding"
                 android:text="000"
-                />
+                tools:ignore="RtlHardcoded" />
             <TextView
-                android:id="@+id/team_two_receiving_yards"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/small_med_padding"
                 android:layout_toRightOf="@id/team_two_receiving_yards_display"
                 android:layout_below="@id/team_two_rushing_yards"
                 android:text="Receiving Yards"
-                />
+                tools:ignore="RtlHardcoded" />
         </RelativeLayout>
 
 
@@ -269,9 +251,8 @@
         android:gravity="center">
         <Button
             style="@style/Widget.AppCompat.Button.Borderless.Colored"
-            android:onClick="onClickStartSecondHalf"
-            android:id="@+id/start_second_half"
             android:background="@drawable/border_black_nofade"
+            android:onClick="onClickStartSecondHalf"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/small_padding"
